# 2025-ES-AM-158-PSET

./: main.py  pset1tyasdf  pyproject.toml
Lab/: pyproject.toml  report.md
Lab/upkie/: pyproject.toml  rollout_policy.py  train_policy.py  train_policy_servos.py
Lab/upkie/tensorboard/PPO_1/: events.out.tfevents.1763735483.HUIT-SEAS-G1G5-MacBook-Pro.28491.0
Lab/upkie/tensorboard/PPO_2/: events.out.tfevents.1763737042.HUIT-SEAS-G1G5-MacBook-Pro.29250.0
Lab/upkie/tensorboard/PPO_3/: events.out.tfevents.1763737184.HUIT-SEAS-G1G5-MacBook-Pro.29283.0
Lab/upkie/tensorboard/PPO_4/: events.out.tfevents.1763738159.HUIT-SEAS-G1G5-MacBook-Pro.29740.0
Lab/upkie/tensorboard/PPO_5/: events.out.tfevents.1763738258.HUIT-SEAS-G1G5-MacBook-Pro.29767.0
Lab/upkie/tensorboard/PPO_6/: events.out.tfevents.1763939219.HUIT-SEAS-G1G5-MacBook-Pro.61999.0
Lab/upkie/tensorboard/PPO_7/: events.out.tfevents.1763941034.HUIT-SEAS-G1G5-MacBook-Pro.62704.0
Lab/upkie/tensorboard/PPO_8/: events.out.tfevents.1763945393.HUIT-SEAS-G1G5-MacBook-Pro.64836.0
Lab/upkie/tensorboard/PPO_9/: events.out.tfevents.1763946227.HUIT-SEAS-G1G5-MacBook-Pro.65028.0
Lab/upkie/upkie/envs/: upkie_pendulum.py  upkie_servos.py
PSET1/: main.py  pset1.ipynb  pyproject.toml
PSET2/: pset2.html  pset2.ipynb  pyproject.toml
PSET3/: main.py  pset3.html  pset3.ipynb  pyproject.toml
PSET3/logs/: progress.csv
