[project]
name = "pset1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cvxpy==1.7.2",
    "gymnasium==1.2.0",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "matplotlib==3.10.5",
    "numpy==2.2.6",
    "pandoc>=2.4",
    "tqdm==4.67.1",
]
