[project]
name = "pset3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium[mujoco]>=1.2.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "nbconvert>=7.16.6",
    "pandoc>=2.4",
    "stable-baselines3[extra]>=2.7.0",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
]
